2003-02-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/tiff/read.t: Added test for reading tiled TIFF.
	* coders/tiff.c (ReadTIFFImage): Add optimized support for
	reading tiled TIFFs.
	(ReadTIFFImage): Optimize loops for reading tiled TIFFs as well.

2003-02-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Optimize RGBA transfer loop.

2003-02-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPrimitive): Return DrawPolygonPrimitive
	status (edit transferred from ImageMagick).

	* magick/utility.c (GetMagickGeometry): Scaling to an area now
	preserves the image aspect ratio.

2003-02-24  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* png.c: Added missing parentheses in typecast (cristy noticed
	the bug that I introduced on 2/18).

2003-02-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am: Add rules to produce www/README.html,
	www/INSTALL-mac.html, www/INSTALL-unix.html, www/INSTALL-vms.html,
	and www/INSTALL-windows.html
	* www/README.html: New file produced from README.txt
	* www/INSTALL-mac.html: New file produced from INSTALL-mac.txt.
	* www/INSTALL-unix.html: New file produced from INSTALL-unix.txt.
	* www/INSTALL-vms.html: New file produced from INSTALL-vms.txt.
	* www/INSTALL-windows.html: New file produced from INSTALL-windows.txt.
	* NEWS: Added news for GraphicsMagick 1.0.0.
	* magick/locale.c: Added error messages to support JP2.
	* locale/C.mgk: Added error messages to support JP2.
	* locale/locale.mgk: Update to GraphicsMagick copyright.
	* coders/jp2.c: Updated to use Jasper 1.700.1 interface
	conventions. Jasper 1.700.1 is required now. Support
	reading arbitrary quantum sizes up to 16-bits.  Return
	grayscale images as PseudoClass.
	* jp2/: Updated Jasper sources to version 1.700.1.

2003-02-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jp2.c (ReadJP2Image): Obtain channel indexes by